<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email:</string>
    <string name="email_form">AhmedKhaled@outlook.com</string>
    <string name="password_name">Password:</string>
    <string name="password_hint">**********</string>
    <string name="create_email">Create Email</string>
    <string name="login_button">Login</string>
    <string name="welcomeText">Welcome in Our Shoe App</string>
    <string name="welcomeText2">"IN our App You Can Add A item in Shoe List "</string>
    <string name="instructionButton">Instruction</string>
    <string name="instructureText1">"Instruction 1 "</string>
    <string name="instructioText2">"Select Button To Add List "</string>
    <string name="instructioText3">Instruction 2</string>
    <string name="instructionText4">You Must Implement All Field In Shoe List</string>
    <string name="shoebutton">Shoe List</string>
    <string name="floatingbutton">click</string>
    <string name="scrollshoe">Scroll Shoe Item</string>
    <string name="fldesc">click</string>
    <string name="shoename">Shoe Name:</string>
    <string name="shoehitname">name</string>
    <string name="compantnameshoe">Company Name:</string>
    <string name="capital_letter">Capital letter</string>
    <string name="shoesizetext">Shoe Size</string>
    <string name="hintsize">size</string>
    <string name="descriptiondestails">Description</string>
    <string name="clicdes">descritption</string>
    <string name="cancelbutton">Cancel</string>
    <string name="savebutton">Save</string>
    <string name="sizemust">You Must Enter Only Number</string>
    <string name="logoutName">Logout</string>
</resources>
