<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        tools:context=".DetailsFragment">


        <TextView
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:fontFamily="@font/roboto"
            android:text="@string/shoename"
            android:textSize="@dimen/shoesizetext" />

        <EditText
            android:id="@+id/text_name_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoehitname"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/compantnameshoe"
            android:textSize="@dimen/shoesizetext" />

        <EditText
            android:id="@+id/text_company_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/capital_letter"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/shoesizetext"
            android:textSize="@dimen/shoesizetext" />

        <EditText
            android:id="@+id/text_sz_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/sizemust"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/descriptiondestails"
            android:textSize="@dimen/shoesizetext" />

        <EditText
            android:id="@+id/text_desc_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/clicdes"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cancelbuttoon"
            android:text="@string/cancelbutton" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cancelbuttoon"
            android:text="@string/savebutton" />
    </LinearLayout>
</layout>