<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/emailMargin"
        android:text="@string/email_text"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/emial_size" />

    <EditText
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_form"
        android:inputType="textPersonName|textImeMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high1_margin"
        android:text="@string/password_name"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/emial_size" />

    <EditText
        android:id="@+id/passord_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:text="@string/login_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/create_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_email"
        android:textSize="20sp" />

</LinearLayout>
</layout>