<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text_inst1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/emailMargin"
        android:fontFamily="@font/roboto"
        android:text="@string/instructureText1"
        android:textAlignment="center"
        android:textSize="@dimen/instructionSize" />

    <TextView
        android:id="@+id/text_inst2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/instructioText2"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_int3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/instructioText3"
        android:textAlignment="center"
        android:textSize="@dimen/instructionSize" />

    <TextView
        android:id="@+id/text_inst4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/instructionText4"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/instruction_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:text="@string/shoebutton"
        android:textSize="16sp" />

</LinearLayout>
</layout>